--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Lint with flake8
+#     - name: Lint with flake8
 #       run: |
 #         pip install flake8
 #         # stop the build if there are Python syntax errors or undefined names
